kubermeabi/ansible/roles/traefik/files/middleware-public.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: public-security
  namespace: traefik
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true
    contentTypeNosniff: true
    browserXssFilter: true
