kubermeabi/ansible/roles/traefik/files/ingressroute-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure-private
  routes:
    - match: Host(`traefik.infra.meabi.org`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: private-ip-whitelist
  tls:
    secretName: traefik-dashboard-tls
    certResolver: homelab-ca
